Add example of video slide
Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -49,3 +49,6 @@ include::chapters/wrapup.adoc[]
 [background-color="#01303a"]
 == Thank you!
 
+
+// [%notitle,background-video="...",background-video-loop=true,background-video-muted=true]
+// === Video title
